# MinecraftClone

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
assets/minecraft/lang/: en_us.json
assets/minecraft/models/block/: cube.json  slab.json
assets/minecraft/shaders/: lines.msh  triangle.fsh  triangle.msh
assets/minecraft/shaders/core/: chunk.fsh  chunk.msh
src/: ChunkPalette.h  GameRenderer.cpp  GameRenderer.hpp  JobSystem.cpp  JobSystem.hpp  Logger.cpp  Logger.hpp  SimpleOption.cpp  SimpleOption.hpp  main.cpp
src/client/: MeshBufferManager.cpp  MeshBufferManager.hpp  MinecraftClient.cpp  MinecraftClient.hpp  main.cpp
src/client/option/: GameOptions.cpp  GameOptions.hpp  SimpleOption.cpp
src/client/render/: Camera.cpp  Camera.hpp  GameRenderer.cpp  GameRenderer.hpp
src/client/resource/: BlockModelLoader.cpp  BlockModelLoader.hpp
src/client/resource/language/: I18n.cpp  I18n.hpp
src/client/util/: Camera.cpp  Camera.hpp  Language.cpp  Language.hpp  Window.cpp  Window.hpp
src/client/vulkan/: ChunkRenderer.cpp  ChunkRenderer.hpp  DescriptorManager.cpp  DescriptorManager.hpp  MeshBufferManager.cpp  MeshBufferManager.hpp  MeshShaderData.hpp  MeshShaderPipeline.cpp  MeshShaderPipeline.hpp  QueueManager.cpp  QueueManager.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp  VulkanContext.cpp  VulkanContext.hpp
src/server/: main.cpp
